		  inputs that are large enough
		- Made the cutoff E-value more aggressive for the largest
		  jobs (thanks Tom Womack / Paul Leyland / Greg Childers)
	- Modified the linear algebra to write new checkpoint files first,
		then overwrite the old checkpoint only if the write completed
		(thanks Greg Childers)
	- Cleaned up the makefile a bit


Version 1.44: 2/5/10
	- NFS poly selection changes:
		- Added a branch that uses Nvidia GPU code. This makes stage 1
		  run enormously faster (my medium-end GPU is 35x faster than
		  one core of my medium-end CPU). The GPU branch also contains
		  root generation code that is critically needed to search for
		  degree-6 polynomials. Hopefully in future releases the
		  GPU and CPU code will be more tightly integrated (thanks
		  to many folks at Mersenneforum for helping to test this)
		- Force the bounds checking for degree 4 to be more strict
		  than degree 5 or 6 (thanks Jayson King)
		- Modified the main driver to avoid saving nonexistent 
		  polynomials
		- Modified the main driver to use stricter bounds for 
		  accepting polynomials
	- Fixed a bug in the relation reading code that caused crashes when 
		initializing empty dependencies (thanks Jeff Gilchrist)
	- Fixed a bug reading factor base files without a trailing newline 
		(thanks Jayson King)
	- Allowed NFS poly selection and sieving for inputs down to 80 digits
		(thanks andi47)


Version 1.43: 10/18/09
	- Made the GMP library mandatory
	- Removed the arbitrary precision math library, replaced with GMP
	- Modified the NFS relation handling code to allow 63-bit 'a' 
		values and 48-bit prime factors. The code now also performs
		runlength-encoding on the list of prime factors
	- Added 64-bit modmul operations to all builds
	- Added checks that the input NFS number corresponds to the input
		NFS polynomials (thanks Tom Womack)
	- NFS square root changes:
		- Optimized the brute force square root code, especially